# JadyKidsize

./: .gitignore  CMakeLists.txt  JadyKidSize.sln  JadyKidSize.vcxproj  JadyKidSize.vcxproj.filters  NoteForOpenCV.html  NoteForOpenCV.md  README.md
Official Info/: README.md  kidsize培训.pptx  readme.txt  ~$器人动作指令.docx  关于动作指令的更新.docx  机器人动作指令.docx
controllers/unirobot/: Makefile  NoteForOpenCV.md  UniRobot.cpp  UniRobot.hpp  config.ini  main.cpp
libraries/: Makefile
libraries/managers/: Makefile
libraries/managers/include/: RobotisOp2DirectoryManager.hpp  RobotisOp2GaitManager.hpp  RobotisOp2MotionManager.hpp  RobotisOp2MotionTimerManager.hpp  RobotisOp2VisionManager.hpp
libraries/managers/src/: RobotisOp2DirectoryManager.cpp  RobotisOp2GaitManager.cpp  RobotisOp2MotionManager.cpp  RobotisOp2MotionTimerManager.cpp  RobotisOp2VisionManager.cpp
libraries/python/: Makefile  _managers.pyd  managers.py  managers27.cpp
libraries/robotis-op2/: Makefile
plugins/remote_controls/: Makefile
plugins/remote_controls/robotis-op2_tcpip/: .robotis-op2_tcpip.dll.signature  Camera.hpp  Communication.cpp  Communication.hpp  Device.cpp  Device.hpp  DeviceManager.cpp  DeviceManager.hpp  Led.hpp  Makefile  Motor.hpp  Packet.cpp  Packet.hpp  RobotisOp2InputPacket.cpp  RobotisOp2InputPacket.hpp  RobotisOp2OutputPacket.cpp  RobotisOp2OutputPacket.hpp  Sensor.hpp  SingleValueSensor.hpp  Time.cpp  Time.hpp  TripleValuesSensor.hpp  Wrapper.cpp  Wrapper.hpp  entry_points.cpp  entry_points.hpp
plugins/robot_windows/: Makefile
plugins/robot_windows/robotis-op2_window/: .robotis-op2_window.dll.signature  Makefile  SSH.cpp  SSH.hpp  TransferWidget.cpp  TransferWidget.hpp  Viewer.hpp  ZIP.cpp  ZIP.hpp  common.hpp
protos/: Darwin-op.proto  Field.proto  Goal.proto  RobotisJersey.proto  RobotisOp2.proto  SBall.proto
worlds/: .seu-unirobot-2018-0.wbproj  .seu-unirobot-2018.wbproj  seu-unirobot-2018-0.wbt  seu-unirobot-2018.wbt
